# leading-specification

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: architecture.md  context-schema.md  engineering-grammar.md  notebook-00-contract.md  repository-workflow.md
examples/: benefits_distribution.py
figures/: README.md
notebooks/: 00_engineering_context.ipynb  README.md
results/: README.md
src/leading_specification/: __init__.py  context.py  export.py  figures.py  notebook.py  paths.py  styles.py  validation.py
tests/: test_context.py  test_export.py  test_paths.py  test_validation.py
